--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -2916,7 +2916,11 @@ form.formOpinar button{
 
 #msj .sectionMSG a div:last-child section>span{
     margin-left: auto;
-    padding-left: 5px;
+    padding: 0 5px;
+
+    color: black;
+    border-radius: 5px;
+    font-weight: normal;
 }
 
 #msj .sectionMSG a div:last-child>p{
@@ -2926,7 +2930,20 @@ form.formOpinar button{
     height: 30px;
 }
 
+/* chat privado */
+#chatPrivado{
+    min-height: calc(100vh - var(--altura-header) - var(--altura-footer) - 10px) !important;
+    margin-top: 10px;
+}
 
+#chatPrivado .sChatMain{
+    border-radius: 15px;
+    background: white;
+    margin: auto;
+    width: 1200px;
+    max-width: 95%;
+    height: calc(100vh - var(--altura-header) - var(--altura-footer) - 20px) !important;
+}
 
 /* MEDIA QUERY */
 
