--- a/WebMart/CSS/index.css
+++ b/WebMart/CSS/index.css
@@ -166,8 +166,8 @@ footer table td:first-child{
     outline: 1px solid #00adec;
     border-radius: 0 15px 15px 0;
     display: flex;
-    position: absolute;
-    z-index: 1;
+    z-index: 0;
+    margin: 20px 0;
 }
 
 .mIndex form{
@@ -280,18 +280,14 @@ footer table td:first-child{
     margin: 90px 30px 10px 30px;
 }
 
-#login, #registro{
-    margin-left: -285px;
-    margin-top:-200px;
-}
 
 #login{
     z-index: 2;
 }
 
 .atras{
-    outline: 0 !important;
-    background: rgba(255, 255, 255, 0.5) !important;
+    display: none !important;
+    border: none !important;
     z-index: -1 !important;
 }
 
@@ -344,20 +340,6 @@ footer table td:first-child{
 
 /* Media query */
 
-@media (min-height: 250px){
-
-
-    main{
-        height: 500px;
-    }
-
-}
-
-@media (min-height: 500px){
-    main{
-        height: 700px;
-    }
-}
 
 @media (max-width: 760px) {
 
@@ -390,7 +372,6 @@ footer table td:first-child{
         font-weight: normal;
     }
 
-
     header img.desplegable{
         display: block;
     }
@@ -403,11 +384,6 @@ footer table td:first-child{
         border-radius: 20px;
         outline: 1px solid #00adec;
         display: block;
-    }
-
-    #login, #registro{
-        margin-left: -155px;
-        margin-top: -250px;
     }
 
     .mIndex>div aside{
@@ -442,10 +418,6 @@ footer table td:first-child{
 
 @media (max-width: 320px) {
 
-    #login, #registro{
-        margin-left: -137px;
-        margin-top: -250px;
-    }
 
     .mIndex form{
         padding: 20px 20px 20px 15px;
